improved some figures

--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -38,10 +38,10 @@
     "from functions import *\n",
     "\n",
     "%matplotlib inline\n",
-    "plt.rcParams['figure.figsize'] = (15, 6)\n",
-    "plt.rcParams['font.size'] = 16\n",
+    "# plt.rcParams['figure.figsize'] = (15, 6)\n",
+    "# plt.rcParams['font.size'] = 16\n",
     "sns.set(style=\"darkgrid\")\n",
-    "sns.set(rc={'figure.figsize': (15, 6)})\n",
+    "# sns.set(rc={'figure.figsize': (15, 6)})\n",
     "\n",
     "PROJECT_ROOT_DIR = \".\"\n",
     "IMAGES_PATH = os.path.join(PROJECT_ROOT_DIR, \"images\")\n",
@@ -236,10 +236,10 @@
    "source": [
     "pop_class_count = data_qual[\"pop.class\"].value_counts(normalize=True)\n",
     "\n",
-    "plt.figure(figsize=(12, 6))\n",
+    "# plt.figure(figsize=(12, 6))\n",
     "sns.barplot(x=pop_class_count.index, y=pop_class_count.values)\n",
     "#plt.title(\"Fréquence des classes de popularité\", fontsize=14)\n",
-    "plt.ylabel(\"Pourcentage d'occurences\", fontsize=13)\n",
+    "plt.ylabel(\"Pourcentage d'occurences\")\n",
     "plt.xlabel(\"Classe\", fontsize=13)\n",
     "save_fig(\"pop_class_frequencies\")\n",
     "plt.show()"
@@ -249,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On voit qu'il y a une distribution uniforme des chansons par classe, sauf pour la classe `A`, qui comprend moins de 10% des chansons. Ceci risque de poser problème dans la suite en termes de prédiction."
+    "On voit qu'il y a une distribution plutôt uniforme des chansons par classe, sauf pour la classe `A`, qui comprend moins de 10% des chansons. Ceci risque de poser problème dans la suite en termes de prédiction."
    ]
   },
   {
@@ -271,8 +271,8 @@
     "y_ticks = spotify_data['key'].value_counts().index\n",
     "\n",
     "sns.barplot(x=key_count.values, y=y_ticks, data=key_count, orient='h')\n",
-    "plt.xlabel(\"% d'occurences\", fontsize=12, weight='bold')\n",
-    "plt.ylabel('Clé', fontsize=12, weight='bold')\n",
+    "plt.xlabel(\"% d'occurences\", fontsize=12)\n",
+    "plt.ylabel('Clé', fontsize=12)\n",
     "ax.set_xticks(ticks=range(0, 16, 1))\n",
     "ax.set_yticklabels(labels=y_ticks, fontsize=12)\n",
     "\n",
@@ -297,10 +297,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 6))\n",
+    "# plt.figure(figsize=(12, 6))\n",
     "sns.barplot(x='key', y='popularity', data=spotify_data)\n",
     "#plt.title(\"Popularité selon la clé\", fontsize=14)\n",
-    "plt.ylabel(\"Popularité\")\n",
+    "plt.ylabel(\"Popularité moyenne\")\n",
     "plt.xlabel(\"Clé\")\n",
     "save_fig(\"popularity_by_key\")\n",
     "plt.show()"
@@ -319,7 +319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 6))\n",
+    "# plt.figure(figsize=(12, 6))\n",
     "sns.boxplot(x='key', y='popularity', data=spotify_data)\n",
     "#plt.title(\"Popularité selon la clé\", fontsize=14)\n",
     "plt.ylabel(\"Popularité\")\n",
@@ -350,7 +350,7 @@
    "source": [
     "mode_count = spotify_data[\"mode\"].value_counts(normalize=True)\n",
     "\n",
-    "plt.figure(figsize=(12, 6))\n",
+    "# plt.figure(figsize=(12, 6))\n",
     "sns.barplot(x=mode_count.index, y=mode_count.values)\n",
     "#plt.title(\"Fréquence des modes\", fontsize=14)\n",
     "plt.ylabel(\"Pourcentage d'occurences\", fontsize=13)\n",
@@ -372,10 +372,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 6))\n",
+    "# plt.figure(figsize=(12, 6))\n",
     "sns.barplot(x='mode', y='popularity', data=spotify_data)\n",
     "#plt.title(\"Fréquence des modes\", fontsize=14)\n",
-    "plt.ylabel(\"Popularité selon le mode\", fontsize=13)\n",
+    "plt.ylabel(\"Popularité moyenne\", fontsize=13)\n",
     "plt.xlabel(\"Mode\", fontsize=13)\n",
     "save_fig(\"popularity_by_mode\")\n",
     "plt.show()"
@@ -394,7 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 6))\n",
+    "# plt.figure(figsize=(12, 6))\n",
     "sns.boxplot(x='mode', y='popularity', data=spotify_data)\n",
     "#plt.title(\"Popularité selon la clé\", fontsize=14)\n",
     "plt.ylabel(\"Popularité\")\n",
@@ -416,7 +416,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(12, 5))\n",
     "sns.barplot(x='mode', y='popularity', hue='key', data=spotify_data)\n",
+    "plt.ylabel(\"Popularité moyenne\")\n",
     "#plt.title(\"Popularité selon la clé et le mode\", fontsize=14)\n",
     "save_fig(\"popularity_by_key_and_mode\")\n",
     "plt.show()"
@@ -428,7 +430,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(12, 5))\n",
     "sns.boxplot(x='mode', y='popularity', hue='key', data=spotify_data)\n",
+    "plt.ylabel(\"Popularité\")\n",
     "#plt.title(\"Popularité selon la clé et le mode\", fontsize=14)\n",
     "save_fig(\"boxplot_popularity_by_key_and_mode\")\n",
     "plt.show()"
@@ -463,8 +467,12 @@
     "corr_matrix = data_quant.corr()\n",
     "cmap = sns.diverging_palette(240, 10, as_cmap=True)\n",
     "\n",
-    "plt.figure(figsize=(10, 10))\n",
-    "sns.heatmap(corr_matrix, cmap=cmap, center=0, vmin=-1, vmax=1)\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "hm = sns.heatmap(corr_matrix, cmap=cmap, center=0, linewidths=1, linecolor='gray')\n",
+    "hm.set_yticklabels(hm.get_yticklabels(), fontsize=11)\n",
+    "hm.set_xticklabels(hm.get_xticklabels(), rotation=45,\n",
+    "                   fontsize=11, ha='right')\n",
+    "\n",
     "#plt.title(\"Matrice de corrélation\")\n",
     "save_fig(\"correlation_square_matrix\")\n",
     "plt.show()"
@@ -520,8 +528,7 @@
     "        axs = inner.subplots(sharex=True)\n",
     "\n",
     "        sns.boxplot(data=data_quant, x=feature, orient='h', ax=axs[0])\n",
-    "        sns.histplot(data=data_quant, x=feature,\n",
-    "                     bins=50 if a != 1 else 100,\n",
+    "        sns.histplot(data=data_quant, x=feature, bins=50 if a != 1 else 100,\n",
     "                     ax=axs[1], kde=True)\n",
     "\n",
     "        axs[0].spines['top'].set_color('black')\n",
@@ -560,12 +567,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(10, 5))\n",
     "ax_data = spotify_data.groupby('acousticness')['popularity'].mean().to_frame().reset_index()\n",
-    "sns.scatterplot(x=ax_data['acousticness'],\n",
-    "                y=ax_data['popularity'],\n",
-    "                color='blue')\n",
+    "sc = sns.scatterplot(x=ax_data['acousticness'], y=ax_data['popularity'], color='blue')\n",
+    "sc.xaxis.set_tick_params(labelsize=10)\n",
+    "sc.yaxis.set_tick_params(labelsize=10)\n",
+    "\n",
     "#plt.title(\"Acousticité\")\n",
     "plt.ylabel('Popularité moyenne', fontsize=12)\n",
+    "plt.xlabel('acousticness', fontsize=12)\n",
     "save_fig('mean_popularity_by_acousticness')\n",
     "plt.show()"
    ]
@@ -583,10 +593,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(10, 5))\n",
     "ax_data = spotify_data.groupby('danceability')['popularity'].mean().to_frame().reset_index()\n",
-    "sns.scatterplot(x='danceability', y='popularity', data=ax_data, color='blue')\n",
+    "sc = sns.scatterplot(x='danceability', y='popularity', data=ax_data, color='blue')\n",
+    "sc.xaxis.set_tick_params(labelsize=10)\n",
+    "sc.yaxis.set_tick_params(labelsize=10)\n",
+    "\n",
     "#plt.title('Dançabilité')\n",
     "plt.ylabel('Popularité moyenne', fontsize=12)\n",
+    "plt.xlabel('danceability', fontsize=12)\n",
     "save_fig('mean_popularity_by_danceability')\n",
     "plt.show()"
    ]
@@ -616,7 +631,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(spotify_data['duration'], bins=50, kde=False)\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "hp = sns.histplot(spotify_data['duration'], bins=90, kde=False)\n",
+    "hp.xaxis.set_tick_params(labelsize=11)\n",
+    "hp.yaxis.set_tick_params(labelsize=11)\n",
+    "\n",
+    "# plt.xlabel('')\n",
     "plt.show()"
    ]
   },
@@ -643,7 +663,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(short_songs['duration'], kde=False, bins=60)\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.histplot(short_songs['duration'], kde=False, bins=80)\n",
+    "\n",
     "#plt.title(f'Chansons courtes (<=8 min) : {short_songs.shape[0]} chansons')\n",
     "plt.xticks(range(0, 9, 1))\n",
     "plt.xlim(0, 9)\n",
@@ -657,7 +679,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.histplot(long_songs['duration'], kde=False, bins=50)\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "sns.histplot(long_songs['duration'], kde=False, bins=60)\n",
     "#plt.title(f'Chansons longues (>8 min) : {long_songs.shape[0]} chansons')\n",
     "save_fig('hist_of_long_songs')\n",
     "plt.show()"
@@ -669,7 +692,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(1, 2, sharey=True)\n",
+    "fig, (ax1, ax2) = plt.subplots(1, 2, sharey=True, figsize=(12, 6))\n",
     "\n",
     "ax1_data = short_songs.groupby('duration')['popularity'].mean().to_frame().reset_index()\n",
     "ax1 = sns.scatterplot(x='duration', y='popularity',\n",
@@ -677,6 +700,7 @@
     "ax1.set_xticks(range(0, 9, 1))\n",
     "ax1.set_xlim(0, 9)\n",
     "ax1.set_ylabel('Popularité moyenne', fontsize=13)\n",
+    "ax1.set_xlabel('duration', fontsize=13)\n",
     "# ax1.set_title('Chansons courtes')\n",
     "\n",
     "ax2_data = long_songs.groupby('duration')['popularity'].mean().to_frame().reset_index()\n",
@@ -685,6 +709,7 @@
     "                      color='green', ax=ax2)\n",
     "ax2.set_xticks(range(8, 49, 4))\n",
     "ax2.set_xlim(6, 50)\n",
+    "ax2.set_xlabel('duration', fontsize=13)\n",
     "# ax2.set_title('Chansons longues')\n",
     "\n",
     "save_fig('popularity_by_long_short_songs')\n",
@@ -704,6 +729,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(10, 5))\n",
     "ax_data = spotify_data.groupby('energy')['popularity'].mean().to_frame().reset_index()\n",
     "sns.scatterplot(x='energy', y='popularity', data=ax_data, color='blue')\n",
     "#plt.title('Énergie')\n",
@@ -750,6 +776,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(10, 5))\n",
     "ax_data = spotify_data.groupby('instrumentalness')['popularity'].mean().to_frame().reset_index()\n",
     "sns.scatterplot(x='instrumentalness', y='popularity',\n",
     "                data=ax_data, color='blue')\n",
@@ -772,6 +799,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(10, 5))\n",
     "ax_data = spotify_data.groupby('liveness')['popularity'].mean().to_frame().reset_index()\n",
     "sns.scatterplot(x='liveness', y='popularity', data=ax_data, color='blue')\n",
     "#plt.title('liveness')\n",
@@ -1036,11 +1064,11 @@
    },
    "outputs": [],
    "source": [
-    "# for i in ['key', 'mode']:\n",
-    "#     sns.pairplot(spotify_data, hue=i)\n",
-    "#     t = 'pairplot_of_data_by_' + i\n",
-    "#     save_fig(t)\n",
-    "#     plt.show()"
+    "for i in ['key', 'mode']:\n",
+    "    sns.pairplot(spotify_data, hue=i)\n",
+    "    t = 'pairplot_of_data_by_' + i\n",
+    "    save_fig(t)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -1049,10 +1077,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sns.pairplot(spotify_data)\n",
-    "# plt.suptitle(\"Pair plot des données\", fontsize=20, y=1.02)\n",
-    "# save_fig(\"pairplot_of_dataset\")\n",
-    "# plt.show()"
+    "sns.pairplot(spotify_data)\n",
+    "plt.suptitle(\"Pair plot des données\", fontsize=20, y=1.02)\n",
+    "save_fig(\"pairplot_of_dataset\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -3149,7 +3177,7 @@
     "width": "428.8px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
