--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -992,7 +992,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.jointplot(x='year', y='popularity', data=spotify_data, height=10)\n",
+    "sns.jointplot(x='year', y='popularity', data=spotify_data, height=7)\n",
     "#plt.suptitle(\"Joint plot de la popularité selon l'année de sortie\", y=1.02)\n",
     "save_fig(\"jointplot_of_popularity_by_year\")\n",
     "plt.show()"
@@ -1065,11 +1065,11 @@
    },
    "outputs": [],
    "source": [
-    "# for i in ['key', 'mode']:\n",
-    "#     sns.pairplot(spotify_data, hue=i)\n",
-    "#     t = 'pairplot_of_data_by_' + i\n",
-    "#     save_fig(t)\n",
-    "#     plt.show()"
+    "for i in ['key', 'mode']:\n",
+    "    sns.pairplot(spotify_data, hue=i)\n",
+    "    t = 'pairplot_of_data_by_' + i\n",
+    "    save_fig(t)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -1078,10 +1078,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sns.pairplot(spotify_data)\n",
-    "# plt.suptitle(\"Pair plot des données\", fontsize=20, y=1.02)\n",
-    "# save_fig(\"pairplot_of_dataset\")\n",
-    "# plt.show()"
+    "sns.pairplot(spotify_data)\n",
+    "plt.suptitle(\"Pair plot des données\", fontsize=20, y=1.02)\n",
+    "save_fig(\"pairplot_of_dataset\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -1355,7 +1355,7 @@
     "    plt.subplots_adjust(wspace=0.3, hspace=0.4)\n",
     "\n",
     "#plt.suptitle('Principal Components from 1 to 4', fontsize=14)\n",
-    "#save_fig('scatter_of_1_4_corr_circle', tight_layout=False)\n",
+    "save_fig('scatter_of_1_4_corr_circle', tight_layout=False)\n",
     "plt.show()"
    ]
   },
@@ -1517,6 +1517,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_history(history):\n",
+    "    '''Fonction de perte des réseaux de neuronnes'''\n",
+    "    hist = pd.DataFrame(history.history)\n",
+    "    hist['epoch'] = history.epoch\n",
+    "    \n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.plot(hist.epoch, hist.loss, label='Loss')\n",
+    "    plt.plot(hist.epoch, hist.val_loss, label='Validation loss')\n",
+    "    plt.legend(loc='upper right')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1560,18 +1577,6 @@
     "\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mm_scaler = MinMaxScaler()\n",
-    "\n",
-    "X_train_scaled_mm = mm_scaler.fit_transform(X_train)\n",
-    "X_test_scaled_mm = mm_scaler.transform(X_test)"
    ]
   },
   {
@@ -1777,8 +1782,9 @@
     "}]\n",
     "\n",
     "EN_Model = GridSearchCV(\n",
-    "    LogisticRegression(penalty='elasticnet', solver='saga', multi_class='multinomial',\n",
-    "                       max_iter=4000, random_state=42),\n",
+    "    LogisticRegression(\n",
+    "        penalty='elasticnet', solver='saga', multi_class='multinomial',\n",
+    "        max_iter=4000, random_state=42),\n",
     "    param, cv=10)\n",
     "\n",
     "EN_Model.fit(X_train_scaled, y_train_class)\n",
@@ -1973,7 +1979,7 @@
     "    param, cv=5\n",
     ")\n",
     "\n",
-    "Lin_SVC_Model.fit(X_train_scaled_mm, y_train_class)\n",
+    "Lin_SVC_Model.fit(X_train_scaled, y_train_class)\n",
     "\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
     "      (Lin_SVC_Model.best_score_, Lin_SVC_Model.best_params_))"
@@ -1985,7 +1991,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Lin_SVC_Predict = Lin_SVC_Model.predict(X_test_scaled_mm)\n",
+    "Lin_SVC_Predict = Lin_SVC_Model.predict(X_test_scaled)\n",
     "Lin_SVC_Accuracy = accuracy_score(y_test_class, Lin_SVC_Predict)\n",
     "model_accuracy_score.append(Lin_SVC_Accuracy)\n",
     "\n",
@@ -2039,7 +2045,7 @@
     "    param, cv=5\n",
     ")\n",
     "\n",
-    "Poly_SVC_Model.fit(X_train_scaled_mm, y_train_class)\n",
+    "Poly_SVC_Model.fit(X_train_scaled, y_train_class)\n",
     "\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
     "      (Poly_SVC_Model.best_score_, Poly_SVC_Model.best_params_))"
@@ -2051,7 +2057,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Poly_SVC_Predict = Poly_SVC_Model.predict(X_test_scaled_mm)\n",
+    "Poly_SVC_Predict = Poly_SVC_Model.predict(X_test_scaled)\n",
     "Poly_SVC_Accuracy = accuracy_score(y_test_class, Poly_SVC_Predict)\n",
     "model_accuracy_score.append(Poly_SVC_Accuracy)\n",
     "\n",
@@ -2101,7 +2107,7 @@
     "    param, cv=5\n",
     ")\n",
     "\n",
-    "Rad_SVC_Model.fit(X_train_scaled_mm, y_train_class)\n",
+    "Rad_SVC_Model.fit(X_train_scaled, y_train_class)\n",
     "\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
     "      (Rad_SVC_Model.best_score_, Rad_SVC_Model.best_params_))"
@@ -2113,7 +2119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Rad_SVC_Predict = Rad_SVC_Model.predict(X_test_scaled_mm)\n",
+    "Rad_SVC_Predict = Rad_SVC_Model.predict(X_test_scaled)\n",
     "Rad_SVC_Accuracy = accuracy_score(y_test_class, Rad_SVC_Predict)\n",
     "model_accuracy_score.append(Rad_SVC_Accuracy)\n",
     "\n",
@@ -2154,7 +2160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_scaled_nn, X_valid, y_train_class_nn, y_valid = train_test_split(\n",
+    "X_train_scaled, X_valid, y_train_class, y_valid = train_test_split(\n",
     "    X_train_scaled, y_train_class, train_size=0.8, random_state=42\n",
     ")"
    ]
@@ -2187,7 +2193,7 @@
    },
    "outputs": [],
    "source": [
-    "history = NN_Model.fit(X_train_scaled_nn, y_train_class_nn, epochs=1000,\n",
+    "history = NN_Model.fit(X_train_scaled, y_train_class, epochs=1000,\n",
     "                       batch_size=30, validation_data=(X_valid, y_valid),\n",
     "                       verbose=0)"
    ]
@@ -2198,19 +2204,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_history(history):\n",
-    "    hist = pd.DataFrame(history.history)\n",
-    "    hist['epoch'] = history.epoch\n",
-    "    \n",
-    "    plt.figure(figsize=(12, 6))\n",
-    "    plt.grid(True)\n",
-    "    plt.ylim(0, 2.5)\n",
-    "    plt.plot(hist.epoch, hist.loss, label='Loss')\n",
-    "    plt.plot(hist.epoch, hist.val_loss, label='Validation loss')\n",
-    "    plt.legend(loc='upper right')\n",
-    "    plt.show()\n",
-    "    \n",
-    "plot_history(history)"
+    "plot_history(history)\n",
+    "save_fig('keras_loss_class')\n",
+    "plt.show()"
    ]
   },
   {
@@ -2272,6 +2268,15 @@
     "})\n",
     "\n",
     "model_performance_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_performance_accuracy.to_csv('result_tables/classification_scores.csv', sep=',')"
    ]
   },
   {
@@ -2432,8 +2437,8 @@
     "}]\n",
     "\n",
     "LassoR_Model = GridSearchCV(Lasso(), param, cv=10)\n",
-    "LassoR_Model.fit(X_train, y_train_reg)\n",
-    "LassoR_Predict = LassoR_Model.predict(X_test)\n",
+    "LassoR_Model.fit(X_train_scaled, y_train_reg)\n",
+    "LassoR_Predict = LassoR_Model.predict(X_test_scaled)\n",
     "\n",
     "# Paramètre optimal\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
@@ -2506,8 +2511,8 @@
     "}]\n",
     "\n",
     "RidgeR_Model = GridSearchCV(Ridge(), param, cv=10)\n",
-    "RidgeR_Model.fit(X_train, y_train_reg)\n",
-    "RidgeR_Predict = RidgeR_Model.predict(X_test)\n",
+    "RidgeR_Model.fit(X_train_scaled, y_train_reg)\n",
+    "RidgeR_Predict = RidgeR_Model.predict(X_test_scaled)\n",
     "\n",
     "# Paramètre optimal\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
@@ -2580,8 +2585,8 @@
     "}]\n",
     "\n",
     "ENetR_Model = GridSearchCV(ElasticNet(), param, cv=10)\n",
-    "ENetR_Model.fit(X_train, y_train_reg)\n",
-    "ENetR_Predict = ENetR_Model.predict(X_test)\n",
+    "ENetR_Model.fit(X_train_scaled, y_train_reg)\n",
+    "ENetR_Predict = ENetR_Model.predict(X_test_scaled)\n",
     "\n",
     "# Paramètre optimal\n",
     "print(\"Meilleur score = %f, Meilleur paramètre = %s\" %\n",
@@ -3043,6 +3048,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "X_train_scaled, X_valid, y_train_reg, y_valid = train_test_split(\n",
+    "    X_train_scaled, y_train_reg, train_size=0.8, random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keras.backend.clear_session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "n_inputs, n_outputs = X_train.shape[1], 1\n",
     "NN_Model = get_NN_model(n_inputs, n_outputs, 'regression')\n",
     "NN_Model.summary()"
@@ -3054,9 +3079,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = NN_Model.fit(X_train_scaled_mm, y_train_reg, epochs=200, batch_size=30,\n",
-    "                       validation_data=(X_test_scaled_mm, y_test_reg), verbose=0)\n",
-    "NN_Predict = NN_Model.predict(X_test_scaled_mm)"
+    "history = NN_Model.fit(X_train_scaled, y_train_reg, epochs=100, batch_size=30,\n",
+    "                       validation_data=(X_valid, y_valid), verbose=0)\n",
+    "NN_Predict = NN_Model.predict(X_test_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_history(history)\n",
+    "save_fig('keras_loss_reg')\n",
+    "plt.show()"
    ]
   },
   {
@@ -3143,6 +3179,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "regression_scores.to_csv('result_tables/regression_scores.csv', sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "regression_scores.sort_values(by='Mean Squared Error', ascending=True)"
    ]
   },
@@ -3169,6 +3214,24 @@
     "})\n",
     "\n",
     "compare_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_table.to_csv('result_tables/comparison_table.csv', sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compare_table.sort_values(by='Thresholding', ascending=False)"
    ]
   },
   {
