added R plots in descriptive analysis, renamed functions file

--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -36,7 +36,7 @@
     "import seaborn as sns\n",
     "import os\n",
     "\n",
-    "from functions import *\n",
+    "from utils import save_fig\n",
     "\n",
     "%matplotlib inline\n",
     "sns.set(style=\"darkgrid\")\n",
@@ -1255,6 +1255,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from utils import plot_corr_circle\n",
+    "# arguments : données, object PCA, composante 1, composante 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_corr_circle(X_new, pca, 1, 2)\n",
     "save_fig(\"pca_components_1_2\")\n",
     "plt.show()"
@@ -1624,6 +1634,9 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "from sklearn.metrics import classification_report, accuracy_score, recall_score\n",
+    "\n",
+    "from utils import plot_cf_matrix\n",
+    "# arguments : observations, prédictions, dessiner un \"mosaic plot\"\n",
     "\n",
     "model_accuracy_score, recall_scores = [], []"
    ]
@@ -2531,6 +2544,10 @@
     "\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
+    "from utils import reg_to_class, plot_results\n",
+    "# argument 1 : prédictions en regression ; retourne un vecteur de classes\n",
+    "# arguments 2 : métriques, observations en rég, prédictions en reg\n",
+    "\n",
     "reg_metrics = (mean_squared_error, r2_score)"
    ]
   },
@@ -2626,17 +2643,6 @@
     "threshold_accuracy_score.append(LR_Accuracy)\n",
     "\n",
     "print(\"Précision : \" + str(LR_Accuracy))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    " from collections import Counter\n",
-    "\n",
-    "Counter(y_rtc_LR)"
    ]
   },
   {
