added regularization paths

--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -1255,7 +1255,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import plot_corr_circle\n",
+    "from utils import plot_corr_circle, rainbowarrow\n",
     "# arguments : données, object PCA, composante 1, composante 2"
    ]
   },
@@ -1965,6 +1965,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Voici une implémentation des chemins de régularisation pour les pénalités Lasso et Elastic Net :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from itertools import cycle\n",
+    "from sklearn.linear_model import lasso_path, enet_path\n",
+    "\n",
+    "X_copy = X_train_scaled\n",
+    "y_copy = y_train_class\n",
+    "\n",
+    "# Compute paths\n",
+    "\n",
+    "eps = 5e-3  # the smaller it is the longer is the path\n",
+    "\n",
+    "# Lasso\n",
+    "alphas_lasso, coefs_lasso, _ = lasso_path(X_copy, y_copy, eps=eps, fit_intercept=False)\n",
+    "\n",
+    "# Positive Lasso\n",
+    "alphas_positive_lasso, coefs_positive_lasso, _ = lasso_path(\n",
+    "    X_copy, y_copy, eps=eps, positive=True, fit_intercept=False)\n",
+    "\n",
+    "# Elastic Net\n",
+    "alphas_enet, coefs_enet, _ = enet_path(\n",
+    "    X_copy, y_copy, eps=eps, l1_ratio=0.8, fit_intercept=False)\n",
+    "\n",
+    "# Positive Elastic Net\n",
+    "alphas_positive_enet, coefs_positive_enet, _ = enet_path(\n",
+    "    X_copy, y_copy, eps=eps, l1_ratio=0.8, positive=True, fit_intercept=False)\n",
+    "\n",
+    "plt.figure(1)\n",
+    "colors = cycle(['b', 'r', 'g', 'c', 'k'])\n",
+    "neg_log_alphas_lasso = -np.log10(alphas_lasso)\n",
+    "neg_log_alphas_enet = -np.log10(alphas_enet)\n",
+    "for coef_l, coef_e, c in zip(coefs_lasso, coefs_enet, colors):\n",
+    "    l1 = plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1)\n",
+    "    l2 = plt.plot(neg_log_alphas_enet, coef_e, linestyle='--', c=c, lw=1)\n",
+    "\n",
+    "plt.xlabel(r'$-log(\\alpha$)')\n",
+    "plt.ylabel('Coefficients')\n",
+    "# plt.title('Chemins Lasso et Elastic Net')\n",
+    "plt.legend((l1[-1], l2[-1]), ('Lasso', 'Elastic Net'), loc='best')\n",
+    "plt.axis('tight')\n",
+    "save_fig('lasso_enet_paths_class')\n",
+    "\n",
+    "\n",
+    "plt.figure(2)\n",
+    "neg_log_alphas_positive_lasso = -np.log10(alphas_positive_lasso)\n",
+    "for coef_l, coef_pl, c in zip(coefs_lasso, coefs_positive_lasso, colors):\n",
+    "    l1 = plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1)\n",
+    "    l2 = plt.plot(neg_log_alphas_positive_lasso, coef_pl, linestyle='--', c=c, lw=1)\n",
+    "\n",
+    "plt.xlabel(r'$-log(\\alpha$)')\n",
+    "plt.ylabel('Coefficients')\n",
+    "# plt.title('Lasso et Lasso positive')\n",
+    "plt.legend((l1[-1], l2[-1]), ('Lasso', 'Lasso positive'), loc='best')\n",
+    "plt.axis('tight')\n",
+    "save_fig('lasso_paths_positive_class')\n",
+    "\n",
+    "\n",
+    "plt.figure(3)\n",
+    "neg_log_alphas_positive_enet = -np.log10(alphas_positive_enet)\n",
+    "for (coef_e, coef_pe, c) in zip(coefs_enet, coefs_positive_enet, colors):\n",
+    "    l1 = plt.plot(neg_log_alphas_enet, coef_e, c=c, lw=1)\n",
+    "    l2 = plt.plot(neg_log_alphas_positive_enet, coef_pe, linestyle='--', c=c, lw=1)\n",
+    "\n",
+    "plt.xlabel(r'$-log(\\alpha$)')\n",
+    "plt.ylabel('Coefficients')\n",
+    "# plt.title('Elastic Net et Elastic Net positive')\n",
+    "plt.legend((l1[-1], l2[-1]), ('Elastic Net', 'Elastic Net positive'), loc='best')\n",
+    "plt.axis('tight')\n",
+    "save_fig('enet_paths_positive_class')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Random Forest"
    ]
   },
@@ -2484,9 +2570,9 @@
    "outputs": [],
    "source": [
     "class_models = [\n",
-    "    'Logistic Regression', 'Lasso', 'Ridge', 'Elastic Net', 'Random Forest',\n",
-    "    'Decision Trees', 'Linear SVC', 'Polynomial SVC', 'Radial SVC',\n",
-    "    'Neural Network'\n",
+    "    'Logistic Regression', 'Lasso', 'Ridge', 'Elastic Net',\n",
+    "    'Random Forest', 'Decision Trees', 'Linear SVC',\n",
+    "    'Polynomial SVC', 'Radial SVC', 'Neural Network'\n",
     "]\n",
     "\n",
     "model_performance_accuracy = pd.DataFrame({\n",
@@ -2881,6 +2967,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "On reprend les chemins de régularisation :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "X_copy = X_train_scaled\n",
+    "y_copy = y_train_reg\n",
+    "\n",
+    "# Compute paths\n",
+    "\n",
+    "eps = 5e-3  # the smaller it is the longer is the path\n",
+    "\n",
+    "# Lasso\n",
+    "alphas_lasso, coefs_lasso, _ = lasso_path(X_copy, y_copy, eps=eps, fit_intercept=False)\n",
+    "\n",
+    "# Positive Lasso\n",
+    "alphas_positive_lasso, coefs_positive_lasso, _ = lasso_path(\n",
+    "    X_copy, y_copy, eps=eps, positive=True, fit_intercept=False)\n",
+    "\n",
+    "# Elastic Net\n",
+    "alphas_enet, coefs_enet, _ = enet_path(\n",
+    "    X_copy, y_copy, eps=eps, l1_ratio=0.8, fit_intercept=False)\n",
+    "\n",
+    "# Positive Elastic Net\n",
+    "alphas_positive_enet, coefs_positive_enet, _ = enet_path(\n",
+    "    X_copy, y_copy, eps=eps, l1_ratio=0.8, positive=True, fit_intercept=False)\n",
+    "\n",
+    "plt.figure(1)\n",
+    "colors = cycle(['b', 'r', 'g', 'c', 'k'])\n",
+    "neg_log_alphas_lasso = -np.log10(alphas_lasso)\n",
+    "neg_log_alphas_enet = -np.log10(alphas_enet)\n",
+    "for coef_l, coef_e, c in zip(coefs_lasso, coefs_enet, colors):\n",
+    "    l1 = plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1)\n",
+    "    l2 = plt.plot(neg_log_alphas_enet, coef_e, linestyle='--', c=c, lw=1)\n",
+    "\n",
+    "plt.xlabel(r'$-log(\\alpha$)')\n",
+    "plt.ylabel('Coefficients')\n",
+    "# plt.title('Chemins Lasso et Elastic Net')\n",
+    "plt.legend((l1[-1], l2[-1]), ('Lasso', 'Elastic Net'), loc='best')\n",
+    "plt.axis('tight')\n",
+    "save_fig('lasso_enet_paths_reg')\n",
+    "\n",
+    "\n",
+    "plt.figure(2)\n",
+    "neg_log_alphas_positive_lasso = -np.log10(alphas_positive_lasso)\n",
+    "for coef_l, coef_pl, c in zip(coefs_lasso, coefs_positive_lasso, colors):\n",
+    "    l1 = plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1)\n",
+    "    l2 = plt.plot(neg_log_alphas_positive_lasso, coef_pl, linestyle='--', c=c, lw=1)\n",
+    "\n",
+    "plt.xlabel(r'$-log(\\alpha$)')\n",
+    "plt.ylabel('Coefficients')\n",
+    "# plt.title('Lasso et Lasso positive')\n",
+    "plt.legend((l1[-1], l2[-1]), ('Lasso', 'Lasso positive'), loc='best')\n",
+    "plt.axis('tight')\n",
+    "save_fig('lasso_paths_positive_reg')\n",
+    "\n",
+    "\n",
+    "plt.figure(3)\n",
+    "neg_log_alphas_positive_enet = -np.log10(alphas_positive_enet)\n",
+    "for (coef_e, coef_pe, c) in zip(coefs_enet, coefs_positive_enet, colors):\n",
+    "    l1 = plt.plot(neg_log_alphas_enet, coef_e, c=c, lw=1)\n",
+    "    l2 = plt.plot(neg_log_alphas_positive_enet, coef_pe, linestyle='--', c=c, lw=1)\n",
+    "\n",
+    "plt.xlabel(r'$-log(\\alpha$)')\n",
+    "plt.ylabel('Coefficients')\n",
+    "# plt.title('Elastic Net et Elastic Net positive')\n",
+    "plt.legend((l1[-1], l2[-1]), ('Elastic Net', 'Elastic Net positive'), loc='best')\n",
+    "plt.axis('tight')\n",
+    "save_fig('enet_paths_positive_reg')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Random Forest"
    ]
   },
@@ -2898,7 +3067,7 @@
    "outputs": [],
    "source": [
     "param = [{\n",
-    "    \"max_features\": [*range(2, 10), 'auto', 'log2'],\n",
+    "    \"max_features\": [*range(2, 10), 'auto', 'sqrt', 'log2'],\n",
     "    \"min_samples_split\": list(range(2, 14))\n",
     "}]\n",
     "\n",
@@ -2997,7 +3166,7 @@
    "outputs": [],
    "source": [
     "param = [{\n",
-    "    \"max_features\": [None, 'auto', 'log2'],\n",
+    "    \"max_features\": ['auto', 'sqrt', 'log2'],\n",
     "    \"min_samples_split\": range(2, 203, 10)\n",
     "}]\n",
     "\n",
